--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: ShineJil Mukund
-logo: /assets/shine_jpg.jpg
+#logo: /assets/shine_jpg.jpg
+#description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
