--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 title: ShineJil Mukund
 logo: /docs/assets/shine_jpg.jpg
-#description: text below image
+description: 
+- Date of Birth - 03/08/1999
+- Father’s name - Mukundan Menon
+- Email - shinejilmukund03@gmail.com
+- Nationality - Indian
+- Hobbies/Interests - Reading, Music, Traveling ,Art
+
 show_downloads: true
 theme: jekyll-theme-minimal
