--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 title: ShineJil Mukund
 logo: /docs/assets/shine_jpg.jpg
 description: |
-  - Date of Birth: 03/08/1999
-  - Father’s name: Mukundan Menon
-  - Email: shinejilmukund03@gmail.com
-  - Nationality: Indian
-  - Hobbies/Interests: Reading, Music, Traveling, Art
+  - Date of Birth | 03/08/1999
+  - Father’s name | Mukundan Menon
+  - Email | shinejilmukund03@gmail.com
+  - Nationality | Indian
+  - Hobbies/Interests | Reading, Music, Traveling, Art
 show_downloads: true
 theme: jekyll-theme-minimal
